--- a/རྫོང་ཁ་.mw
+++ b/རྫོང་ཁ་.mw
@@ -11,7 +11,7 @@
 རྫོང་ཁ་འདི་ སྤྱི་ལོ་ ༡༩༧༡ གི་ལོ་ལུ་ རྒྱལ་ཡོངས་ཀྱི་ཁ་སྐད་འབད་ ངོས་འཛིན་གནང་ཞིནམ་ལས་ འབྲུག་མི་ཆེ་འབྲིང་ཆུང་གསུམ་ག་ར་གིས་ ངེས་པར་དུ་ཤེས་དགོཔ་ལས་བརྟེན་  སྤྱི་ལོ་ ༡༩༧༡ གི་ལོ་ལས་ སློབ་གྲྭ་ཁག་ལུ་ སློབ་སྟོན་འབད་ནི་འགོ་བཙུགས་ཞིནམ་ལས་ ཡིག་ཐོག་ལུ་འབྲི་ནི་འགོ་བཙུགས་ནུག
 
 == རྫོང་ཁ་གི་ཡི་གེའི་བཟོ་རྣམ། ==
-དེང་སང་ཀློག་རིག་ནང་འབྲི་བའི་སྐབས་ལག་ལེན་འཐབ་སྲོལ་ཡོད་པའི་ རྫོང་ཁའི་ཡི་གེ་བཟོ་རྣམ་ DDC Uchen དང་ DDC Rinzin དང་Jomolhari དང་ DDC Joyig དང་Wangdi 29 ཚུ་ཡོདཔ་ཨིན། དེ་ཚུ་ལས་ DDC Uchen དང་Wangdi 29 གཉིས་གཞུང་འབྲེལ་གྱི་ཡི་གུ་བྲི་བའི་སྐབས་ཡིག་གཟུགས་ཀྱི་སྦོམ་ཚད་༡༢་དང་༣༢འབད་མི་འདི་ལག་ལེན་འཐབ་དོ་ཡོདཔ་ཨིན། 
+དེང་སང་ཀློག་རིག་ནང་འབྲི་བའི་སྐབས་ལག་ལེན་འཐབ་སྲོལ་ཡོད་པའི་ རྫོང་ཁའི་ཡི་གེ་བཟོ་རྣམ་ DDC Uchen དང་ DDC Rinzin དང་Jomolhari དང་ [https://www.dzongkha.gov.bt/dz/tools DDC Joyig] དང་Wangdi 29 ཚུ་ཡོདཔ་ཨིན། དེ་ཚུ་ལས་ DDC Uchen དང་Wangdi 29 གཉིས་གཞུང་འབྲེལ་གྱི་ཡི་གུ་བྲི་བའི་སྐབས་ཡིག་གཟུགས་ཀྱི་སྦོམ་ཚད་༡༢་དང་༣༢འབད་མི་འདི་ལག་ལེན་འཐབ་དོ་ཡོདཔ་ཨིན། 
 
 === གསལ་བྱེད་གསུམ་བཅུ། ===
 ཀ་ ཁ་ ག་ ང་། ཅ་ ཆ་ ཇ་ ཉ། ཏ་ ཐ་ ད་ ན། པ་ ཕ་ བ་ མ། ཙ་ ཚ་ ཛ་ ཝ། ཞ་ ཟ་ འ་ ཡ། ར་ ལ་ ཤ་ ས། ཧ་ ཨ།
