*Empty MediaWiki Message*

--- a/འབྲུག་དང་པའི་རྟོགས་བརྗོད།.mw
+++ b/འབྲུག་དང་པའི་རྟོགས་བརྗོད།.mw
@@ -8,5 +8,55 @@
 </big><br>
 <big>དེ་བསྒང་ད་རུང་ བུམ་ཐང་ལུ་ ཀྲོང་གསར་དཔོན་སློབ་དུང་དཀར་རྒྱལ་མཚན་དང་ བྱ་དཀར་རྫོང་དཔོན་པདྨ་བསྟན་འཛིན་གཉིས་ཀུ་དབང་ཚད་ཀྱི་སྐོར་ལས་མ་འགྲིགས་པར་ དམག་འཁྲུགས་སྦོམ་ལངསམ་ལས་ བྱ་དཀར་དཔོན་སློབ་པདྨ་བསྟན་འཛིན་གྱི་ཁ་ཐུག་ལས་དམག་དཔོན་སྦེ་ མགྲོན་གསོ་པ་སེང་གེ་རྣམ་རྒྱལ་བཏངམ་མ་ཚད་ ཀྲོང་གསར་རབ་སྡེ་དང་མཐུན་ལམ་བཟོ་སྟེ་ རབ་སྡེའི་དགེ་སློང་ཚུ་གིས་གསང་སྒོ་ཕྱེ་བཞགཔ་ལས་ འདི་འཕྲོ་ལས་བྱ་དཀར་པའི་དམག་ཚུ་རྫོང་ནང་འཛུལ་ཏེ་ དམག་གི་རྒྱལ་ཁ་ཐོབ་ཡོད་རུང་ བྱ་དཀར་དཔོན་སློབ་པདྨ་བསྟན་འཛིན་གིས་ མགྲོན་གསོཔ་སེངྒེ་རྣམ་རྒྱལ་ལུ་ ཀྲོང་གསར་མགྲོན་གཉེར་གྱི་གོ་གནས་གནང་ནི་ཨིན་པའི་ཞལ་བཞེས་མཛད་ཡོདཔ་ལས་ སོང་གེ་རྣམ་རྒྱལ་གྱིས་ཡང་ དམག་འགན་འབག་སྟེ་རྐྱབ་ནི་དེ་གིས་ དམག་གི་རྒྱལ་ཁ་ཐོབ་རུང་ ཤུལ་ལས་ པདྨ་བསྟན་འཛིན་ཁོ་ར་དཔོན་སློབ་མཛད་པའི་བསྒང་ལས་ ཀྲོང་གསར་མགྲོན་མཉེར་གྱི་གོ་གནས་ཁར་ ཁོ་རའི་ཁོད་ཀིན་བསྐོས་ཡོདཔ་ལས་བརྟེན་ ཀྲོང་གསར་དཔོན་སློབ་པདྨ་བསྟན་འཛིན་འདི་ མགྲོན་གསོཔ་སེངྒེ་རྣམ་རྒྱལ་གྱིས་བཀྲོངས་ཡོདཔ་ད་ ཀྲོང་གསར་དཔོན་སློབ་པདྨ་བསྟན་འཛིན་འདི་ སྲས་ཨོ་རྒྱན་དབང་ཕྱུག་གི་ཨ་ཞང་ཨིན་པའི་ཁར་ ཡུམ་གྱི་བཀའ་དང་འབྲེལ་ འདས་ལོ་ ༢༣༥ སྤྱི་ལོ་ ༡༨༨༦ རབ་བྱུང་ ༡༥ པའི་མེ་ཁྱི་ལོ་ལུ་ ཨོ་རྒྱན་དབང་ཕྱུག་གིས་ མགྲོན་གསོཔ་སེངྒེ་རྣམ་རྒྱལ་བཀྲོངས་ཏེ་ དེ་བསྒང་ཨོ་རྒྱན་དབང་ཕྱུག་ཁོ་ར་ ཀྲོང་གསར་དཔོན་སློབ་ཀྱི་གོ་གནས་ཁར་བཞུགས་ནུག།</big><br>
 
+=== གོང་ས་ཨོ་རྒྱན་དབང་ཕྱུག་མཆོག་གིས་རྒྱ་དྲུང་བསྐོ་བཞག། ===
+<big>༉ མཐའ་མཇུག་ལུ་ ནང་འཁོད་ཀྱི་རྒྱུན་བརྟན་ཏོག་ཏོ་བཟོ་བའི་ཤུལ་ གོང་ས་ཨོ་རྒྱན་དབང་ཕྱུག་མཆོག་གིས་ འབྲུག་རྒྱལ་ཁབ་སྒྲིང་སྒྲིང་འགྱུར་ཐབས་ལུ་ ཕྱིའི་རྒྱལ་ཁབ་དང་འབྲེལ་བ་བཟོ་ནིའི་ བརྩོན་ཤུགས་བསྐྱེད་དགོ་པའི་ཐུགས་བཞེད་གནངམ་བཞིན་དུ། དེ་ཡང་ རྒྱལ་རབས་གསལ་བའི་སྒྲོན་མེ་ནང་ ཀ་ལི་ཕུ་ལུ་ཚོང་རྐྱབ་སྡོད་མི་ འབྲས་ལྗོངས་པའི་གོ་གནས་ཀྱི་མིང་ (ཀར་ཛི) ཟེར་སླབ་མི་ ཨྱོན་རྡོ་རྗེ་དེ་ རྒྱུ་དང་ལོངས་སྤྱོད་སྟོབས་ཆེ་བ་ཕུན་སུམ་ཚོགས་ཏོག་ཏོ་ཡོདཔ་མ་ཚད་ དམ་པའི་ཆོས་ལུ་ཡིད་ཆེས་དད་པ་སྐྱེད་མི་ཅིག་ཨིན་མས། དེ་མ་ཚད་ ཞབས་དྲུང་རིན་པོ་ཆེ་མཆོག་གི་ཐུགས་སྤྲུལ་ལྔ་པ་འཇིགས་མེད་ཆོས་རྒྱལ་གྱི་སྐུ་མདུན་ལས་ དབང་བསྐུར་དང་དཔེ་ཁྲིད་ཞུ་བའི་ཡ་མཚན་ཆུ་བའི་གནས་ཚུལ་ལ་སོགས་པ་ཚུ་ ཨོ་རྒྱན་དབང་ཕྱུག་མཆོག་གིས་གསན་པའི་ཤུལ་ བསོད་ནམས་ཕུན་སུམ་ཚོགས་པའི་ སྐད་གྲགས་ཡོངས་སུ་ཁྱབ་པ་དེ་ ག་ཟེར་མི་ཨིན་ན་ གཟིགས་དགོཔ་གལ་ཆེ་ཟེར་སྐུ་མདུན་བཅར་དགོ་པའི་བཀའ་ཤོག་གནངམ་བཞིན་དུ་ ཀར་ཛི་ཨོ་རྒྱན་རྡོ་རྗེ་དེ་ བུམ་ཐང་ལུ་དཔོན་སློབ་ཨོ་རྒྱན་དབང་ཕྱུག་གི་ཕྱག་དབང་ལུ་བཅར་ནུག། དེ་སྐབས་ ཨོ་རྒྱན་དབང་ཕྱུག་མཆོག་གི་སྐོར་ལས་དྲི་བའི་སྐབས། སྤ་གྲོ་བཙན་ཏོ་དང་ ཨ་པ་དུང་དཀར་ཆོས་རྗེ་དཔའ་ལ་རྒྱལ་མཚན་གྱི་བུ་ ཟུར་པ་དང་ལྷག་པར་དུ་ རྗོང་དཔོན་བགྲེསཔ་ཤར་པ་སྤུན་ཅུང་གི་བུ་དང་ ཉེ་ཚན་ཕོགཔ་མ་ཚད་ ཤུལ་ལས་ལྷོ་མཚམས་ཁ་ཐུག་ འབྲུག་གཞུང་གི་སྐུ་ཚབ་ཡང་དག་པ་ཅིག་མེདཔ་བཞིན་དུ་ རྒྱ་འབྲུག་རྒྱལ་ཁབ་གཉིས་གྱི་བར་ན་འཕྲལ་འཕྲལ་ར་འཛིང་འཁྲུག་དང་དམག་འཁྲུག་ལ་སོགས་པ་བྱུང་ཡོདཔ་ལས་ མཐུན་འབྲེལ་ཕུན་སུམ་ཚོགས་ཏོག་ཏོ་མེདཔ་མ་ཚད་ སྐུ་ཚབ་ལེགས་ཤོམ་མེད་པ་ལུ་བརྟེན་ ཨོ་རྒྱན་རྡོ་རྗེ་ རྒྱ་མཚམས་ཁའི་སྐུ་ཚབ་གྱི་གོ་གནས་ལུ་བསྐོ་བཞག་མཛད་གནང་ནུག། 
+</big><br>
+<big>སྤྱི་ལོ་ ༡༨༩༢ ལུ་ཨོ་རྒྱན་རྡོ་རྗེ་གིས་འགོ་འདྲེན་ཐོག་ལས་ སྤ་རོ་དཔོན་སློབ་ཟླ་བ་དཔལ་འབྱོར་དང་ བོད་ཀྱི་སྐུ་ཚབ་གཉིས་ཀྱི་བར་ཞལ་འཛོམས་འཚོགས་ནུག། ཕ་རི་ལུ་ཆིངས་ཡིག་མཚན་་རྟགས་དང་གཅིག་ཁར་ ཨ་ལུ་རྡོ་རྗེ་གིས་ཧཱ་དང་ དགའ་ས་ལུ་ མི་ཚེ་གཅིག་བདག་སྐྱོང་དབང་ཚད་འབད་དགོཔ་ཨིནམ་ད་ ཁོ་གི་བཟའ་ཚང་ཚུ་ འབྲུག་ལུ་སྒེར་གྱི་ས་གཞི་ཉམས་སྲུང་འབད་དགོཔ་ཨིན་མས། ཨ་ལུ་རྡོ་རྗེ་ཆུམ་སྦི་ལུང་པ་ལུ་གཞི་ཆགས་ཏེ་ མཐའ་མ་མཐུན་འགྲིག་མཇུག་བསྡུ་ཞིནམ་ལས་ཚེ་ལས་འདས་སོ་ནུག། 
+</big><br>
+<big>རང་ལུགས་འདས་ལོ་ ༢༤༩ སྤྱི་ལོ་ ༡༩༠༠ རབ་བྱུང་ ༡༥ ལྕགས་བྱི་ཟླ་ ༨ ཚེས་ ༡༥ ལུ་ དཔོན་སློབ་ཨོ་རྒྱན་དབང་ཕྱུག་གིས་གནང་ནུག། གཞུང་གི་བཀའ་ཤོག་ལྟར་ རྒྱ་དྲུང་ཨོ་རྒྱན་རྡོ་རྗེ་ལུ་ལྷོ་མཚམས་ལས་འགོ་བཙུགས་ཏེ་ ཤར་ཕྱོགས་ཨ་མར་ཏ་ལ་ལས་ནུབ་ཕྱོགས་དར་དཀར་ཚུན་གྱི་ བདག་སྐྱོང་འབད་ནིའི་་དབང་ཚད་ཡོདཔ་མ་ཚད་ ཀྲོང་གསར་དཔོན་སློབ་ལུ་འགན་ཁག་ཡོད་མི་ཅིག་ལུ་གྱུར་ནུག། བིརི་ཊིཤ་ཚུ་གིས་དོན་ལུ་ ཨོ་རྒྱན་རྡོ་རྗེ་མཆོག་འབྲུག་གི་ངོ་ཚབ་ཨིནམ་ད་ འབྲུག་གི་མཐུན་འབྲེལ་བདག་འཛིན་འཐབ་ནིའི་འགན་ཁག་ཕོགཔ་ཨིན་མས། དེ་མ་ཚད་ ཀ་པུང་ལུ་བཞུགས་པའི་སྐབས་ཨོ་རྒྱན་རྡོ་རྗེ་མཆོག་གིས་ རྒྱ་གར་གྱི་ཁ་སྐད་མང་རབས་ཅིག་ལྷབ་ནུག།
+</big><br>
+
+=== བིརི་ཊིཤི་གི་ངོས་འཛིན། ===
+<big>༉ གོང་ས་ཨོ་རྒྱན་དབང་ཕྱུག་མཆོག་ བོད་རྒྱལ་ཁབ་དང་གཅིག་ཁར་ གྲོས་བསྡུར་གྱི་ ཆིངས་ཡིག་བཟོ་བའི་སྐབས་ ཕྱག་འགན་ལྷག་བསམ་དག་པའི་སེམས་བསྐྱེད་ཀྱི་སྒོ་ལས་མཛད་གནངམ་མ་ཚད་ མི་དབང་མཆོག་གིས་ཐབས་ཤེས་མ་འདྲཝ་ སྣ་ཚོགས་བཏོན་ཏེ་ བསམ་པའི་རེ་བ་འགྲུབ་ཚུགས་པའི་ནུས་པ་དང་སེམས་ཤུགས་བསྐྱེདཔ་བཞིན་དུ་ བིརི་ཊི་ཤི་གིས་ངལ་རངས་དང་བཀའ་དྲིན་དགའ་ཚོར་བསྐྱེད་དེ་ རང་ལུགས་འདས་ལོ་ ༢༥༤ སྤྱི་ལོ་ ༡༩༠༥ ཤིང་སྦྲུལ་ལོ་ལུ་ གཟེངས་བསྟོད་ཀྱི་རྟགས་མ་ ཀེ་སི་ཨའི་ཨེ་སི་ཟེར་ གསེར་གྱི་རྟགས་མ་གནང་ནུག།</big><br>
+<big>རྟགས་མ་གནང་ནིའི་དོན་ལུ་ སི་ཀིམ་གྱི་བིརི་ཊིཤི་སྲིད་དོན་འགོ་དཔོན་ཇོན་ཀཱལཝཊ་ཝིཊ་ འབྲུག་ལུ་བཏང་ནུག། གོང་ས་ཨོ་རྒྱན་དབང་ཕྱུག་གིས་ སྲས་ཨོ་རྒྱན་རྡོ་རྗེ་ལུ་ ཕྱག་ལཱ་གི་ཞབས་ཏོག་ཚུ་ངོས་འཛིན་གནངམ་མ་ཚད་ གོ་གནས་ཡར་སེང་གནང་སྟེ་ ཧཱ་དྲུང་པ་གི་གོ་གནས་བསྐོ་བཞག་གནང་ནུག།</big><br>
+<big>ཤུལ་ལས་གོང་ས་ཨོ་རྒྱན་དབང་ཕྱུག་དང་སྲིད་དོན་འགོ་དཔོན་ཇོན་ཀཱལཝཊ་ཝིཊ་གཉིས་ ཆོས་གྲོགས་འཆམ་ཤོས་ཅིག་ལུ་གྱུར་ནུག། སྤྱི་ལོ་ ༡༩༠༥ ལུ་ གོང་ས་ཨོ་རྒྱན་དབང་མཆོག་གི་ཚ་བོ་ བོད་ལྷ་ལུང་ལུ་ པད་གླིང་གསུང་སྤྲུལ་རྟེན་འབྲེལ་བརྩི་སྲུང་མཛད་ས་ལུ་ མི་དབང་མཆོག་དང་ཇོན་ཀཱལཝཊ་ཝིཊ་གཉིས་གཅིག་ཁར་བྱོན་ནུག། རྒྱུ་མཚན་དང་དམིགས་དོན་གཙོ་བོ་ འབྲུག་རྒྱལ་ཁབ་དང་བིརི་ཊིཤི་རྒྱ་གར་རྒྱལ་ཁབ་གཉིས་ཀྱི་བར་ བརྩེ་གདུང་དང་མཐུན་ལམ་སྒྲིང་སྒྲི་བཟོ་ཐབས་ལུ་ཨིན་ནོ།།
+</big><br>
+
+=== མི་རྗེ་ཨོ་རྒྱན་དབང་ཕྱུག་མཆོག་གི་ བསྟན་སྲིད་ལུ་ཕན་པའི་ཐུགས་བཞེད། ===
+<big>༉ ཨོ་རྒྱན་དབང་ཕྱུག་གི་སྐུ་སྤུན་སྦོམ་ཤོས་ སྲས་ཕྲིན་ལས་སྟོབས་རྒྱས་ནི་ བོད་ལྷ་ལུང་གྲྭ་ཚང་ནང་བཞུགས་མི་འདི་་ ཡབ་འཇིགས་མེད་རྣམ་རྒྱལ་ཞབས་ལས་ རང་དོན་ཐར་པ་བསྒྲུབ་ནི་ལས་ གཞན་དོན་ཕྲིན་ལས་རྣམ་བཞིའི་སྒོ་ལས་ དཔལ་ལྡན་འབྲུག་པའི་བསྟན་སྲིད་བཟུང་དགོཔ་ གལ་ཆེ་བའི་ཐུགས་བཞེད་གནང་སྟེ་ འབྲུག་ལུ་འོང་དགོ་པའི་བཀའ་གནང་མི་དང་འཁྲིལ་ཏེ་ འབྲུག་ལུ་བྱོན་ཏེ་ དགེ་སློང་གི་སྡོམ་པ་དེ་ རྟེན་གསུམ་གྱི་སྐུ་མདུན་ལུ་ཕུལ་ཏེ་ དབང་འདུས་ཕོ་བྲང་རྫོང་དཔོན་གྱི་གོ་གནས་ཁར་ རྟེན་འབྲེལ་མཛད་སྒོའི་རིམ་པ་དང་བཅས་ཏེ་ མངའ་གསོལ་ཞུ་ཡོདཔ་དང་གྲལ་ ལོག་ཤུལ་ལས་སྤ་རོ་དཔོན་སློབ་ཀྱི་ཁྲི་ཐོག་གུར་ཡང་བཞུགས་ནུག། དེ་ལས་ སྤྱི་ལོ་ ༡༨༨༣ པའི་ལོར་ ཁོ་ར་སྙིང་ནད་ཀྱིས་ཤི་སོངཔ་ལས་ སྤ་རོ་དཔོན་སློབ་ཀྱི་ཁྲི་ཐོག་གུར་ རྒྱལ་སྲས་ཨོ་རྒྱན་དབང་ཕྱུག་ཁོ་རའི་ སྤུན་ཆ་བཅར་ཤོས་ཟླ་བ་དཔལ་འབྱོར་འདི་ མངའ་གསོལ་ཞུཝ་དང་གཅིག་ཁར་ རྒྱ་གར་དཔོན་སློབ་ཀྱི་ལས་ཁུངས་ཡང་མེདཔ་སྦེ་བཟོ་གནང་ནུག། ད་རུང་  རྒྱལ་སྲས་ཨོ་རྒྱན་དབང་ཕྱུག་ཁོ་རའི་ སྤུན་ཆ་བཅར་ཤོས་ ཀྲོང་གསར་དཔོན་སློབ་ཨ་ཞང་པདྨ་བསྟན་འཛིན་གཤགས་མིའི་སྲས་འཆི་མེད་རྡོ་རྗེ་མཆོག་ནི་ བྱ་དཀར་རྫོང་དཔོན་གི་གོ་གནས་གུར་ མངའ་གསོལ་ཞུ་ནུག།  
+</big><br>
+<big>ཀྲོང་གསར་དཔོན་སློབ་ཨ་ཞང་པདྨ་བསྟན་འཛིན་གཤགས་མིའི་སྲས་འཆི་མེད་རྡོ་རྗེ་མཆོག་དང་ མི་རྗེ་ཁོ་རའི་སྲིངམོ་ ཡོ་ཤེས་ཆོས་སྒྲོན་གཉིས་གཉེན་ལམ་ལེགས་ཤོམ་འགྱོ་ནི་དེ་གིས་ འཆི་མེད་རྡོ་རྗེ་ལུ་བྱ་དཀར་རྫོང་དཔོན་གྱི་གོ་གནས་གནངམ་མ་ཚད་ སྤྱི་ལོ་༡༨༨༤ པའི་ལོར་ཡུམ་པདྨ་ཆོས་སྐྱིད་གཤགས་པའི་ཤུལ་མ་ ཨོ་རྒྱན་དབང་ཕྱུག་མཆོག་གི་ ཁོ་རའི་སྲིངམོ་ ཡེ་ཤེས་ཆོས་སྒྲོན་དང་ཁོད་ཀིན་འཆི་མེད་རྡོ་རྗེ་མཆོག་ལུ་ བུམ་ཐང་དབང་འདུས་ཆོས་གླིང་གི་ཕོ་བྲང་འདི་ ཤུལ་བཞག་དང་གྲལ་གནང་ནུག། བྱ་དཀར་་རྫོང་དཔོན་འཆི་མེད་རྡོ་རྗེའི་སྲིངམོ་ཨ་ཞེ་རིན་ཆེན་དཔལ་མོ་འདི་ བསྟེན་དུ་རུང་བའི་ཨམ་སྲུ་གི་མཚན་ཉིད་དང་ལྡནམ་ལས་ མི་རྗེ་ཨོ་རྒྱན་དབང་ཕྱུག་མཆོག་གིས་ རང་ལུགས་འདས་ལོ་ ༢༣༤ སྤྱི་ལོ་ ༡༨༨༥ པའི་རབ་བྱུང་ ༡༥ པའི་ཤིང་བྱ་ལོར་ དགུང་ལོ་ ༢༤ བཞེས་པའི་སྐབས་ མཚན་ལྟས་མཛད་སྒོའི་རིམ་པ་དང་བཅས་ བཙུན་མོར་ཁབ་ཏུ་བཞེས་ནུག།
+</big><br>
+<big>དེའི་ཤུལ་ ཨོ་རྒྱན་དབང་ཕྱུག་གི་ཡང་ ཡབ་རྗེ་དམ་པའི་ཞལ་ཆེམ་ལྟར་དུ་ ཁོང་གཉིས་ལུ་སྤུན་ཆའི་འདུ་ཤེས་གནང་སྟེ་ ཤེལ་རྔ་ཕུན་ཚོགས་རྡོ་རྗེ་ལུ་ སྤུངས་ཐང་རྫོང་དཔོན་དང་ ཨ་ལོ་རྡོ་རྗེ་ལུ་ ཐིམ་ཕུག་་རྫོང་དཔོན་གྱི་གོ་གནས་ཁར་ མངའ་གསོལ་ཞུ་ནུག། 
+</big><br>
+
+=== མཐའ་མ་ཆམ་ལུ་ཕབ་པའི་དམག་འཐབ་ཀྱི་མཛད་པའི་སྐོར། ===
+<big>༉ ཀྲོང་གསར་དཔོན་སློབ་ཀྱི་གོ་གནས་བཞེས་ནི་དེ་གིས་ མི་དབང་ཨོ་རྒྱན་དབང་ཕྱུག་མཆོག་ནི་ ཀྲོང་གསར་རྫོང་ནང་ར་བཞུགས་དགོཔ་སྦེ་ ཤར་ཕྱོགས་འཁོར་ལོ་རྩིབས་བརྒྱད་ཀྱི་ཆབ་སྲིད་སྐྱོང་དགོཔ་ལས་བརྟེན་ ཁོང་ར་མཐུན་ཚོགས་ཅན་གྱི་དཔོན་གཡོག་ཚུ་ ཁ་འགྱེས་ཏེ་བཞུགས་དགོཔ་ཐོན་ནུག།
+</big><br>
+<big>དེའི་བསྒང་ མི་རིང་བ་ཨོ་རྒྱན་དབང་ཕྱུག་ནི་རྒྱལ་ཁབ་སྐྱོང་བའི་དུས་ལུ་ ཁོ་གི་ཕ་སྤུན་རྡོ་རྗེ་ཕུན་ཚོགས་དང་ཨ་ལོ་རྡོ་རྗེ་གཉིས་ཀྱིས་ ཨོ་རྒྱན་དབང་ཕྱུག་མཆོག་ལུ་ག་ནི་ཡང་ འདྲི་བསྟུན་མ་འབད་བར་ ཕྱོགས་གཅིག་གི་སྡེ་སྲིད་ནི་ ཁོང་གཉིས་ཀྱི་ཁ་བསྡོམས་སྟེ་ ཁོང་རའི་མི་ངོ་གཅིག་གདམ་ཁ་རྐྱབ་བཞིན་ སྡེ་སྲིད་ཀྱི་ཁྲི་ཐོག་གུར་མངའ་གསོལ་བཞུགས་ཡོད་མི་འདི་ལུ་གཟིགས་ གནམ་མེད་ས་མེད་ཁོང་ཁྲོ་ལངས་དགོཔ་བྱུང་ནུག། དེ་ལས་ ཕ་སྤུན་རྡོ་རྗེ་ཕུན་ཚོགས་དང་ཨ་ལོ་རྡོ་རྗེ་གཉིས་ཀྱིས་  ཨོ་རྒྱན་དབང་ཕྱུག་རྐུ་གསོད་རྐྱབ་སྟེ་བཀྲོངས་དགོ་པའི་ཡི་གུ་དང་ ནང་གསུག་དངུལ་ཀྲམ་ ༤༠༠ བསྡམས་ཏེ་ ཆོས་རྩེ་མགྲོན་གཉེར་འཆང་ལོང་ལུ་བཏངམ་མ་ཚད་ དེ་དང་གཅིག་ཁར་ དཔོན་སློབ་ལུ་ཡང་ གནད་དོན་གཞན་གྱི་སྐོར་ལས་གསལ་བའི་ཞུ་ཡིག་ཅིག་བསྡམས་སྦེ་ རང་ལུགས་འདས་ལོ་ ༢༣༣ སྤྱི་ལོ་༡༨༨༤ རབ་བྱུང་ ༡༥ ཤིང་སྤྲེལ་ལོ་ལུ་བསྐྱལ་ཡོདཔ་ལས་ ཡི་གུ་གཉིས་པོ་ མགྲོན་གཉེར་གྱི་ལགཔ་ཁར་ལྷོད་དེ་ཡོད་མི་ནང་ དཔོན་སློབ་རྐུ་གསོད་བརྐྱབ་དགོ་པའི་གནད་དོན་འཐོན་ནི་དེ་གིས་ མགྲོན་གཉེར་འཆང་ལོང་དེ་གིས་ དངུལ་ཀྲམ་བཞི་བརྒྱ་དང་སྦྲགས་ཏེ་བཏང་པའི་ཡི་གུ་དེ་ དཔོན་སློབ་ཨོ་རྒྱན་དབང་ཕྱུག་ལུ་འདི་འཕྲོ་ལས་གཟིགས་ཕུལ་ཕུལཝ་ལས་ ཨོ་རྒྱན་དབང་ཕྱུག་ནི་རྣམ་རྟོག་ལངམ་དང་བཅས་ ཁོ་ལུ་གནས་ཚུལ་དེ་བཟུམ་ཨིན་པས་ཟེར་གསུངས་ནུག།
+</big><br>
+<big>རྒྱུ་མཚན་དེ་ལུ་བརྟེན་ཏེ་ ཁོང་གཉིས་ཀྱིས་ངོ་རྒོལ་རྐྱབ་ནི་ཨིན་པའི་ལོ་རྒྱུས་དེ་ ཧེ་མ་ལས་ཨོ་རྒྱན་དབང་ཕྱུག་གིས་གསན་ཡོད་རུང་ དང་པ་ཡབ་རྗེ་དམ་པའི་ཞལ་ཆེམས་དང་འགལཝ་ཨིནམ་མ་ཚད་ གཉིས་པ་ཐག་རིང་གི་གཏམ་ལུ་བདེན་པ་ཡོད་མེད་ཡང་མི་ཤེས་ཟེར་ གསུམ་པ་ དོན་མེད་ཀྱི་དམག་འཐབ་ཀྱི་བྱ་བ་ལས་བརྟེན་ རང་གཞན་དང་ ཤར་ནུབ་ཀྱི་མི་སེར་ཚུ་ སྡུག་བསྔལ་འབྱུང་འོང་ཟེར་ ཨོ་རྒྱན་དབང་ཕྱུག་མཆོག་གིས་ཐུགས་བཞེད་རྒྱ་ཆེ་ས་ལས་གནང་སྟེ་ ཤར་རཱ་ཛ་འོག་ལུ་འོང་སྟེ་ ཞལ་འཛོམས་གནང་དགོ་པའི་བཀའ་ཤོག་དང་འཁྲིལ་ཏེ་ ཁོང་གཉིས་ཀྱིས་ཡང་ དེ་སྦེ་བཏུབ་པའི་ལན་ཡོད་རུང་ ཁོང་གཉིས་འོང་ནི་ཕར་བཞག་ ཞུ་ལན་དང་སྐུ་ཚབ་ཙམ་ཡང་མ་བཏངམ་ལས་ ཨོ་རྒྱན་དབང་ཕྱུག་མཆོག་ ཐུགས་གདིང་ལས་ཕམ་སྟེ་ ཁོང་གཉིས་ཀྱི་ངོ་རྒོལ་འབདཝ་ཐག་ཆོད་དེ་ ཚར་མ་གཅོད་པར་བཞག་ཐབས་མེད་པའི་ཐུགས་བཞེད་གནང་སྟེ་ ལོག་ཀྲོང་གསར་ལུ་བྱོན་ནུག།
+</big><br>
+<big>དེ་ལས་ཨོ་རྒྱན་དབང་ཕྱུག་གིས་ དམག་ཚུ་གྲ་སྒྲིག་རྐྱབ་བཞིན་ ཁོ་རའི་སྒར་ལྟོ་ཚུ་དང་སྒར་ལྟོའི་རིགས་ཆ་མཉམ་བཀུག་སྟེ་ དམག་ཚོགས་ཡང་མང་སྡེ་ལུང་པའི་གཞུང་ལམ་ཁར་ཡང་ཤོང་མ་ཤོངམ་ཅིག་སྤུངས་ཡོདཔ་ད་ རང་ལུགས་འདས་ལོ་ ༢༣༤ སྤྱི་ལོ་ ༡༨༨༥ རབ་བྱུང་ ༡༥ ཤིང་བྱ་ལོའི་ཟླ་བ་དང་པའི་ཚེས་ ༡ ལུ་ དམག་མི་གྲངས་འབོར་ ༢༡༤༠ འི་རྩིས་ཀྱི་དཔུང་འཚོགས་ཏེ་ ཉིན་ཞག་གསུམ་གྱི་ནང་ སྤུ་ན་ཁ་རྫོང་ལུ་ཕེབས་བཞུགསཔ་ད་ སྤུངས་ཐང་གྲྭ་ཚང་ནང་དགེ་འདུན་པའི་སྡེ་ཚུ་ཡང་ཐུགས་གདུངས་ཏེ་ཞབས་ས་ཁར་མ་ཆག་པར་ རྗེ་མཁན་ཁྲི་རབས་ཞེ་གཅིག་པ་ རྗེ་ངག་དབང་དོན་ལྡན་གྱིས་དབུ་གཙོས་པའི་དཔོན་སློབ་ཚུ་ གོང་སའི་སྐུ་མདུན་ལུ་ཕེབས་ཏེ་ དམག་གི་སྦྱོར་བ་མ་དགོ་པའི་ཞི་བའི་ཆིངས་འགྲིགས་ཀྱི་གསོལ་བཏབ་ཞུ་བར་བཅར་ལུགས་གསུངས་ཡོད་རུང་ གོང་ས་གི་གསུངས་མི་ནང་ ཁོང་གཉིས་དང་ངེ་གི་བདེན་བརྫུན་ནི་ དཀོན་མཆོག་དཔང་དུ་བཙུགས་ཏེ་དབྱེ་བ་མ་ཕྱེ་བར་ཐབས་མེད་ཐལ་སོངཔ་ལས་ བྱ་བ་འདི་བརྩམ་དགོཔ་བྱུང་ཡོད་པ་ཅིན། ཁོ་ལུ་འཛོལ་བ་ཡོདན་ ཉེས་ཆད་ཁོ་རའི་སྲོག་ཐོག་འབབ་ནི་དང་ ཁོང་ལུ་འཛོལ་བ་ཡོདན་ ཉེས་ཆད་ཁོང་རའི་སྲོག་ཐོག་འབབ་པའི་ཐུགས་སྨོན་གནང་སྟེ་ གྲྭ་ཚང་ནང་ལྷ་མོ་ཞལ་ཧོནམ་ཉིནམ་གསུམ་གནང་དགོ་པའི་གསོལ་འདེབས་ཞུ་ནི་དང་ དེའི་འགྲོ་སོང་ང་ར་གིས་ཕུལ་འོང་ཟེར་གསུངས་ནུག། 
+</big><br>
+<big>དེ་སྐབས་ལུ་ སྡེ་སྲིད་ཁྲི་རབས་ང་གཉིས་པ་དགའ་བ་བཟང་པོ་ ཁྲི་ཐོག་ཁར་བཞུགས་ཡོདཔ་ལས་ ཐིམ་རྫོང་པ་ཨ་ལོ་རྡོ་རྗེ་དང་སྤུངས་རྫོང་པ་ཕུན་ཚོགས་རྡོ་རྗེ་གཉིས་ལུ་ སྡེ་སྲིད་ཀྱི་ཁ་ཐུག་ལས་དམག་གི་རོགས་རམ་ག་ཅི་ཡང་གནང་མ་བཏུབ་ནི་དེ་གིས་ ཁོང་གཉིས་ཀྱིས་དགའ་བ་བཟང་པོ་སྡེ་སྲིད་ལས་ཕབ་སྟེ་ སྡེ་སྲིད་གསརཔ་བཏོན་ནི་སྦེ་ ཞབས་དྲུང་འཇིགས་མེད་ནོར་བུའི་ཡབ་ དཀོན་མཆོག་དབང་འདུས་ལུ་ དངུལ་ཀྲམ་སུམ་སྟོང་དྲུག་བརྒྱ་དང་སྦྲགས་ཏེ་སྡེ་སྲིད་མཛད་དགོ་པའི་ཞུ་བ་ཕུལ་ཡོད་རུང་ ཡབ་དཀོན་མཆོག་དབང་འདུས་ཀྱིས་ཡང་ གོ་གནས་ལུ་དང་འདོད་ཡང་མེད་ཟེར་གསུངས་ཏེ་ཞལ་བཞེས་མ་མཛད་པས།
+</big><br>
+<big>དེ་ལས་ ཨོ་རྒྱན་དབང་ཕྱུག་གིས་དབུ་གཙོས་པའི་དམག་སྡེ་གཙོ་བོ་མེ་མདའ་སྒང་ལུ་ལྷོད་པའི་བསྒང་ལས་ ཕུན་ཚོགས་རྡོ་རྗེ་དང་ཨ་ལོ་རྡོ་རྗེ་གི་དམག་སྡེ་ཚུ་ཡང་ སྤུངས་ཐང་ཁ་ལས་ཐོན་ཏེ་ ཕོ་ཆུ་བརྒལ་འཛོམས་ཕ་ཁར་དམག་ཐེངས་དང་པ་ཕྱད་པའི་སྐབས་ རྫོང་དཔོན་གཉིས་ཀྱི་ཁ་ཐུག་གི་དམག་མི་གཅིག་བསདཔ་མ་ཚད་ གཅིག་ནདཔ་བཏོན་ཏེ་ དམག་ཡང་མཇུག་བསྡུ་ནུག།
+</big><br>
+<big>དེ་ལས་ དམག་འཛིང་གཉིས་པ་འདི་ བྱི་ལི་སྒང་ལུ་ ཧེ་མ་བཟུམ་སྦེ་ར་ ཕྱད་དེ་དམག་འཐབ་པའི་སྐབས་ རྫོང་དཔོན་གཉིས་ཀྱི་དམག་མི་བཞི་ དམར་བསད་བཏངམ་ལས་ ཨོ་རྒྱན་དབང་ཕྱུག་གི་དམག་ལུ་མ་ཐུབ་པར་ རྫོང་དཔོན་གཉིས་ཡང་རྒྱབ་བཤུད་རྐྱབ་མ་ཚད་ སྤུངས་ཐང་ཁ་ལས་བཀྲ་ཤིས་ཆོས་རྫོང་ཁ་ཐུག་བྱོག་འགྱོ་དགོཔ་ཐོན་ནུག།</big><br>
+<big>དེ་ལས་ ཨོ་རྒྱན་དབང་ཕྱུག་གི་དམག་མི་ཚུ་གིས་ སྤུངས་ཐང་ཁ་ལས་བྱོག་ཐིམ་ཕུག་སོང་པའི་རྟིང་བདའ་སྟེ་ ཀླུ་གྲོང་སྒང་ལས་མར་ཐོན་པའི་བསྒང་ ཨ་ལོ་རྡོ་རྗེའི་དམག་མི་ཚུ་གིས་ ཚགས་ཁར་མ་ཚུད་པར་ ཐིམ་ཕུག་ཁ་ཐུག་མ་ཐལ་ དེ་གི་ནངས་པ་ར་ རི་མགོ་ལས་མར་སྦེ་སེམས་རྟོགས་ཁའི་རྫོང་ནང་ལྷོད་ ཨོ་རྒྱན་དབང་ཕྱུག་གིས་དམག་མི་ཚུ་འཁྱིད་དེ་ ཧིང་ལི་ལ་བརྒལ་ཏེ་སེམས་རྟོགས་ཁའི་རི་འོག་ལས་མར་འཛུལ་ཏེ་ སེམས་རྟོགས་ཁའི་རྫོང་གཞིས་ནི་ ཨོ་རྒྱན་དབང་ཕྱུག་གི་ཕྱག་ལུ་ཚུད་ནུག།</big><br>
+<big>དེ་ལས་ ཨོ་རྒྱན་དབང་ཕྱུག་གི་དམག་མི་ཚུ་ ལུང་བསྟན་ཕུག་ལུ་འཐབ་སྟེ་ དེའི་བསྒང་གཉའ་རྒོད་གཉིས་ཆ་ར་དུས་གཅིག་ལུ་བསདཔ་ལས་ རྫོང་དཔོན་གཉིས་ཀྱི་དམག་མི་ཚུ་ཡུདཔ་ཐེངས་ཅིག་ལུ་ གར་སོང་ཡང་མེད་པར་ བྱོག་ཡར་སོ་ནུག། དེ་བསྒང་ འབྲུག་རྒྱལ་ཁབ་འདི་ནང་ མི་སེར་ཚུ་ལུ་ བདེ་སྐྱིད་ཟེརཝ་རྩ་ལས་མེད་པར་ སྦུལ་གྱི་ཚང་ནང་ ཞག་ཉལ་ཉལཝ་ལས་སྐྱོཝ་སྦེ་སྡོད་དགོཔ་བྱུང་ཡོད་པའི་ཁར་ རྫོང་<big>དཔོན་ཁྲི་རབས་ཞེ་གཅིག་པ་ངག་དབང་དོན་ལྡན་གྱིས་ མི་མང་སྤྱི་དོན་ལུ་ཐུགས་བཞེད་རྒྱ་ཆེ་ས་ལས་གནང་སྟེ་ ཞི་བའི་ཐོག་ཆིངས་འགྲིགས་དགོ་པའི་ལོ་རྒྱུས་གསུངས་བཞིན་ གསུང་གྲོས་ཀྱི་དོན་ལུ་ཆོས་རྩེ་པའི་སྐུ་ཚབ་ སྤ་རོ་དཔོན་སློབ་ཟླ་བ་དཔལ་འབྱོར་དང་ རྫོང་དཔོན་གཉིས་ཀྱི་ཁ་ཐུག་ལས་སྤུ་ན་ཁ་རྫོང་དཔོན་ཕུན་ཚོགས་རྡོ་རྗེ་གཉིས་ཀྱི་འགོ་ཁྲིད་ཐོག་ཞལ་འཛོམས་གནང་ནི་གུར་ཐག་བཅད་ནུག།</big><br>
+ཁོང་དཔོན་གཡོག་ཚུ་ཞལ་འཛོམས་གནང་སར་ལྷོད་པའི་བསྒང་ ཕྱོགས་གཉིས་ཀྱི་སྐུ་ཚབ་ཚུ་གསུང་གྲོས་འགོ་མ་བཙུགས་པའི་ཧེ་མར་ གསོལ་མཛར་དྲངས་པའི་སྐབས་ དབང་རྫོང་པའི་མགྲོན་གཉེར་ཨོ་རྒྱན་རྡོ་རྗེ་དེ་ དྲངས་བཞག་པའི་གྲལ་སྡོད་དེ་ ཕུན་ཚོགས་རྡོ་རྗེའི་གདོང་ཁར་ལྷོདཔ་ཅིག་བཀབ་ནེ་བུད་རྫུ་བཏབ་སྦེ་ དཔའ་རྟགས་ཀྱི་གཡུ་པ་བཀབ་ནེ་ལུ་རྡུགས་ཏེ་སྡོད་པའི་བར་ན་ རིན་སྤྱི་ཟླ་བ་དཔལ་འབྱོར་གྱིས་དཔའ་རྟགས་གཡུག་ཐེངས་གཅིག་ལུ་ མགོ་གཉིས་བཀག་རྐྱབ་པའི་ལོ་རྒྱུས་བཀོད་ནུག།</big><br>
+<big>དེ་ལས་ཨ་ལོ་རྡོ་རྗེ་དང་ ཁོ་རའི་གནས་ཚང་ཚུ་བོད་པའི་རྒྱལ་ནང་བྱོག་ཡར་སོ་ནི་དེ་གིས་ མི་རྗེ་ཨོ་རྒྱན་རྡོ་རྗེ་གིས་ཐིམ་ཕུག་རྫོང་དཔོན་འདི་ཁོ་རའི་ཨ་ཁུའི་བུ་ ཀུན་བཟང་ཕྲིན་ལས་ལུ་མཇལ་གསོལ་བཞུགས་གནང་ནུག། དེ་ལས་རང་ལུགས་འདས་ལོ་ ༢༣༥ རབ་བྱུང་ ༡༥ མེ་ཁྱི་ཟླ་ ༣ པའི་ནང་ ཐིམ་ཕུའི་རྫོང་དཔོན་གྱི་གོ་གནས་ནི་ལྷུན་རྩེའི་རྫོང་དཔོན་ ཨ་ཁུ་དུང་དཀར་རྒྱལ་མཚན་གྱི་བུ་ ཀུན་བཟང་ཕྲིན་ལས་དེ་ཡང་ ཨ་ལོ་རྡོ་རྗེའི་ཚབ་སྦེ་མངའ་གསོལ་ཞུ་ནུག། 
+</big><br>
+<big>དེ་སྐབས་ལུ་ སྡེ་སྲིད་ཁྲི་རབས་ང་ལྔ་པ་དགའ་བ་བཟང་པོ་ནི་ ཁོ་རའི་ཐུགས་འགན་བཞེས་པའི་ཕྱག་ལཱ་དེ་ ་ལེགས་ཤོམ་སྦེ་མཛད་དེ་ དེའི་ཤུལ་ལས་ར་དབྱངས་པའི་སློབ་དཔོན་མཛད་མི་ སངས་རྒྱས་རྡོ་རྗེ་ སྤྱི་ལོ་༡༨༨༦ རབ་བྱུང་ ༡༥ མེ་ཁྱི་ལུ་མངའ་གསོལ་ཞུ་གནང་ནུག། དེ་ལས་སྤུངས་ཐང་རྫོང་དཔོན་ཚབ་ དབང་ཕྱུག་བསྐོས་གནང་སྟེ། ཨོ་རྒྱན་དབང་ཕྱུག་ཁོ་ར་ཀྲོང་གསར་དཔོན་སློབ་དང་གོང་གཟིམ་སྦྲེལ་ཏེ་ མཛད་ཞིནམ་ལས་ཚུར་ འབྲུག་རྒྱལ་ཁབ་འདི་ནང་ཞི་བདེའི་རྩ་བ་བཙུགས་ཚུགས་ནུག།
+</big><br>
+
+
+
+
+
+
+
 === ཁུངས་གཏུག། ===
-Gyamtsho, T. (1996). A History of Bhutan. Thimphu, Bhutan: Ministry of Health and Education .
+# Gyamtsho, T. (1996). A History of Bhutan. Thimphu, Bhutan: Ministry of Health and Education
