*Empty MediaWiki Message*

--- a/འབྲུག་དང་པའི་རྟོགས་བརྗོད།.mw
+++ b/འབྲུག་དང་པའི་རྟོགས་བརྗོད།.mw
@@ -52,6 +52,14 @@
 <big>དེ་སྐབས་ལུ་ སྡེ་སྲིད་ཁྲི་རབས་ང་ལྔ་པ་དགའ་བ་བཟང་པོ་ནི་ ཁོ་རའི་ཐུགས་འགན་བཞེས་པའི་ཕྱག་ལཱ་དེ་ ་ལེགས་ཤོམ་སྦེ་མཛད་དེ་ དེའི་ཤུལ་ལས་ར་དབྱངས་པའི་སློབ་དཔོན་མཛད་མི་ སངས་རྒྱས་རྡོ་རྗེ་ སྤྱི་ལོ་༡༨༨༦ རབ་བྱུང་ ༡༥ མེ་ཁྱི་ལུ་མངའ་གསོལ་ཞུ་གནང་ནུག། དེ་ལས་སྤུངས་ཐང་རྫོང་དཔོན་ཚབ་ དབང་ཕྱུག་བསྐོས་གནང་སྟེ། ཨོ་རྒྱན་དབང་ཕྱུག་ཁོ་ར་ཀྲོང་གསར་དཔོན་སློབ་དང་གོང་གཟིམ་སྦྲེལ་ཏེ་ མཛད་ཞིནམ་ལས་ཚུར་ འབྲུག་རྒྱལ་ཁབ་འདི་ནང་ཞི་བདེའི་རྩ་བ་བཙུགས་ཚུགས་ནུག།
 </big><br>
 
+=== མི་དབང་ཨོ་རྒྱན་དབང་ཕྱུག་མཆོག་དགོངས་པ་རྫོགས་པའི་སྐོར། ===
+<big>༉ སྤྱི་ལོ་ཆིག་སྟོང་དགུ་བརྒྱ་བཅུ་བདུན་ (༡༩༡༧) ལུ་ གོང་གཟིམ་ཨོ་རྒྱན་རྡོ་རྗེ་མཆོག་ དགོངས་པ་རྫོགས་པའི་ཤུལ་ལུ་ ཁོ་རའི་སྲས་བསོད་ནམས་སྟོབས་རྒྱས་རྡོ་རྗེ་ ཧཱ་གི་དྲུང་པ་ཕྱག་ཞུ་སྡོད་མི་དེ་ གོང་གཟིམ་གྱི་གོ་གནས་གནང་ནུག། དེ་ལས་ ལོ་གཅིག་གི་ཤུལ་ལས་ སྤ་རོ་དཔོན་སློབ་ཟླ་བ་དཔལ་འབྱོར་འདི་ དགོངས་པ་རྫོགས་པའི་ཤུལ་ལས་ རྒྱ་གར་རྫོང་དཔོན་འཆི་མེད་རྡོ་རྗེ་གིས་ ཚ་བོ་ཚེ་རིང་དཔལ་འབྱོར་གྱི་སྤ་རོ་དཔོན་སློབ་ཀྱི་གོ་གནས་མཛད་ནུག།</big> <br>
+<big>དེ་ལས་ བརྒྱུད་འཛིན་རྒྱལ་སྲས་འཇིགས་མེད་དབང་ཕྱུག་མཆོག་ སྤྱི་ལོ་ཆིག་སྟོང་དགུ་བརྒྱ་བཅུ་མེད་ལྔ་ (༡༩༠༥) ལུ་ སྐུ་འཁྲུངས་ཡོདཔ་དང་ དེ་མ་ཚད་མི་དབང་རྒྱལ་བཙུན་གཉིས་ལུ་ སྲས་དྲག་ཤོས་འགྱུར་མེད་རྡོ་རྗེ་འདི་སྤྱི་ལོ་ ༡༩༡༢ དང་ སྲས་མོ་ཨ་ཞེ་དཀོན་མཆོག་དབང་མོ་འདི་སྤྱི་ལོ་ ༡༩༡༥ དང་ སྲས་དྲག་ཤོས་ཀརྨ་ཕྲིན་ལས་ལྷུན་གྲུབ་འདི་སྤྱི་ལོ་ ༡༩༡༨ ལོར་སྲས་སྲསམོ་གསུམ་འཁྲུངས་ནུག། ལྷག་པར་དུ་མི་དབང་མཆོག་ལུ་བཙུན་མོ་དང་པ་ལས་སྲསམོ་གཉིས་འཁྲུངས་ནུག། དེའི་ཤུལ་ལས་ ཡུམ་ཨ་ཞེ་བརྩོན་འགྲུས་ལྷ་མོ་ཡང་ སྤྱི་ལོ་ ༡༩༢༢ པའི་ལོར་དགོངས་པ་རྫོགས་ནུག།</big> <br>
+<big>དེ་ལས་ འབྲུག་རྒྱལ་པོ་མི་དབང་ཨོ་རྒྱན་དབང་ཕྱུག་མཆོག་བུམ་ཐང་ལུ་ སྐུ་མཚམས་ལུ་བཞུགས་ཏེ་ སྤྱི་ལོ་ཆིག་སྟོང་དགུ་བརྒྱ་ཉེར་དྲུག་(༡༩༢༦) ལུ་ མི་དབང་མཆོག་དགུང་ལོ་ ༦༧ པའི་ལོར་དགོངས་པ་རྫོགས་ནུག། མི་དབང་མཆོག་དགོངས་པ་མ་རྫོགས་པའི་ཧེ་མ་ གོ་ལ་དང་ཏི་རུ་ལ་སོགས་པ་ཚུ་ སྤུ་ན་ཁ་གཞུང་དགེ་འདུན་གྲྭ་ཚང་ལུ་ཕུལ་ཡོདཔ་མ་ཚད་ དེའི་ཤུལ་ལས་དགོངས་པ་རྫོགསཔ་ད་ མེ་སྦྱང་ཡང་སྐུ་རྗེས་ལྷ་ཁང་ནང་ལུ་ཕུལ་ནུག།</big><br>
+
+
+
+
 
 
 
